Links from intro post

--- a/src/404.md
+++ b/src/404.md
@@ -4,4 +4,5 @@ title: "Not Found!"
 ---
 
 You seem to have followed a broken link. If you think this URL should
-point to something more useful then please [let me know on Twitter](https://twitter.com/owickstrom).
+point to something more useful then please [let me know on
+Twitter](https://twitter.com/owickstrom).
